--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/AppThemeLight"
         android:name=".TimberApp">
         <activity
-            android:name="activities.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -26,13 +26,13 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="activities.SettingsActivity"
+        <activity android:name=".activities.SettingsActivity"
             android:theme="@style/AppThemeNormalLight"/>
 
-        <activity android:name="activities.PlaylistDetailActivity"
+        <activity android:name=".activities.PlaylistDetailActivity"
             android:theme="@style/AppTheme.FullScreen.Light"/>
 
-        <activity android:name="activities.SearchActivity"
+        <activity android:name=".activities.SearchActivity"
             android:theme="@style/AppThemeNormalLight"/>
 
         <!-- Music service -->
